# schw_api_service

./: .gitignore  README.md  main.py  pyproject.toml  schw_api_service.py
auth/: __init__.py  refresh_token.py  token_service.py
client/: __init__.py
client/account/: account.py
client/market_data/: market_data.py
src/schw_api_service/: __init__.py
src/schw_api_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/schw_api_service/auth/: __init__.py  authorize.py  token_service.py
src/schw_api_service/client/: __init__.py
src/schw_api_service/client/account/: account.py  account_docs.md
src/schw_api_service/client/market_data/: market_data.py  market_data_docs.md  subscription_codes.py
src/schw_api_service/utils/: requests.py
utils/: requests.py
